# repo-native-symbolic-science

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REPO_POLICY.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md
docs/: CLAIM_TYPES_AND_GATES.md  END_TO_END_WORKFLOW.md  GETTING_STARTED_WITH_AN_AGENT.md  HUMAN_SCIENTIST_GUIDE.md  SCIENTIFIC_DECISION_PROVENANCE.md  SKILL_COOKBOOK.md  TROUBLESHOOTING.md  adapter_claude_code.md  adapter_codex.md  agent_first_controller_usage.md  architecture.md  cas_backends.md  human_agent_workflow.md  limitations.md  object_and_task_lifecycle.md  reporting_contract.md  semantic_escalation.md  theoretical_supplement_quickstart.md
engines/: engine_registry.json
examples/: theoretical_supplement_pipeline_README.md  theoretical_supplement_request.json
fixtures/: synthetic_workflow_demo.json
loop_engine/: orch_dispatcher.py  orch_registry.py
physics_tasks/: run_physics_tasks.py  tasks.py
policies/: claim_governance.md  human_gate_policy.md  session_capabilities.md
schemas/: checkpoint.schema.json  claim_lifecycle.schema.json  claim_relation.schema.json  cross_engine_verification.schema.json  decision_provenance.schema.json  dependency_gate.schema.json  derivation_graph.schema.json  derivation_step.schema.json  engine_capability.schema.json  engine_environment_probe.schema.json  engine_execution_truth.schema.json  engine_request.schema.json  engine_selection.schema.json  equation_evidence_mapping.schema.json  expression_presentation.schema.json  generic_raw_object.schema.json  human_gate_escalation.schema.json  human_information_request.schema.json  human_readability_audit.schema.json  latex_evidence_mapping.schema.json  linear_system_evidence.schema.json  mathematical_omission_ledger.schema.json  normalized_engine_result.schema.json  orch_validation_result.schema.json  orchestration_event_log.schema.json  orchestration_recovery.schema.json  orchestration_request.schema.json  orchestration_state.schema.json  physical_interpretation_mapping.schema.json  reader_pathway.schema.json  (+10 more)
(+343 files in other folders)
