[project]
name = "repo-native-symbolic-science"
version = "0.1.0"
description = "A repo-native framework for auditable human-agent symbolic science"
license = "Apache-2.0"
readme = "README.md"

[project.optional-dependencies]
sympy = ["sympy>=1.12"]
numpy = ["numpy>=1.24", "scipy>=1.10", "mpmath>=1.3"]
jsonschema = ["jsonschema>=4.17"]
