[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# The repo is a flat layout with several non-package top-level dirs (scripts/, tests/,
# verification/, benchmarks/, …) that run via the repo root on sys.path. Restrict install
# discovery to the real importable packages so `pip install -e .` is unambiguous; other
# entry points keep working through the repo root as before.
[tool.setuptools.packages.find]
include = ["loop_engine*", "validators*"]
namespaces = true

[project]
name = "repo-native-symbolic-science"
version = "0.1.0"
description = "A repo-native framework for auditable human-agent symbolic science"
license = "Apache-2.0"
readme = "README.md"

# Product runtime dependencies actually required by the shipped geometric-basis
# verification capability: the numerical verifier uses numpy; the symbolic verifier uses
# sympy; the production ORCH adapter and CLI validate request/response with jsonschema.
# Lower bounds are the versions the release verification was run against (no upper caps).
dependencies = [
    "sympy>=1.12",
    "numpy>=1.26",
    "jsonschema>=4.10",
]

[project.optional-dependencies]
# Verification / test-only dependencies (Gate 1-4 + full suite runner); not runtime deps.
# pyyaml is required by the benchmarks/ provenance tests, surfaced by a fresh-env replay.
test = ["pytest>=7", "pyyaml>=6"]
# Extended numerics used by other framework tooling, not by the geobasis runtime
# (mpmath is already pulled in transitively by sympy).
extended-numerics = ["scipy>=1.10", "mpmath>=1.3"]
# Back-compat aliases for the previous per-package extras.
sympy = ["sympy>=1.12"]
numpy = ["numpy>=1.26", "scipy>=1.10", "mpmath>=1.3"]
jsonschema = ["jsonschema>=4.10"]
